@@ -6,5 +6,5 @@ Lock=asim-platforms
 Description=Description of platforms
 Name=platforms
 Tag=HEAD
-CSN=CSN-platforms-200
+CSN=CSN-platforms-201
 Dependencies=hasim/HEAD
